# vault-db-injector

./: .gitattributes  .gitignore  .golangci.yml  .pre-commit-config.yaml  .trivyignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_debug  Makefile  README.md  demo.yaml  go.mod  go.sum  index.html  index.yaml  main.go  mkdocs.yml  pyproject.toml  release-please-config.json  sitemap.xml  test-classic.yaml  test-uri.yaml  tmp.yml
.github/: dependabot.yml
.github/workflows/: bpf-integration.yml  build_and_push.yml  ci.yml  deploy-docs.yml  helm-docs.yml  release-please.yml  release.yml  test.yml
.planning/plans/: 2026-05-02-nri-injection-mode.md  2026-05-04-projected-sa-vault-auth.md  2026-05-06-ci-overhaul.md
.planning/specs/: 2026-05-02-ebpf-injection-mode-design.md  2026-05-02-nri-injection-mode-design.md  2026-05-03-pull-not-push-design.md  2026-05-06-ci-overhaul-design.md
contributors/architecture-deep-dive/: index.html
contributors/build-from-source/: index.html
contributors/comparison/: index.html
contributors/contributing/: index.html
developers/annotations/: index.html
developers/examples/: index.html
docs/: alertmanager.md  getting-started.md  index.fr.md  index.md
docs/developers/: examples.md  (+7 more)
example/: pgsqlgule-classic.yaml  pgsqlgule-uri.yaml
fr/: index.html
hack/: get-version.sh
helm/: Chart.yaml  Chart.yml  README.md  README.md.gotmpl  values.yml
monitoring/: dashboard.json
scripts/: enable-nri-on-k3d.sh  k3d-containerd-config.toml.tmpl  vault-set-audience.sh
search/: search_index.json
(+257 files in other folders)
